Gapminder: Moving controls, updating CSS, correcting offsets

--- a/content/projects/gapminder/css/style.css
+++ b/content/projects/gapminder/css/style.css
@@ -51,15 +51,22 @@
   padding-right: 1em;
 }
 
+.container {
+  max-width: 1024px;
+}
+
 #chart-area svg {
-  margin-left: auto;
-  margin-right: auto;
   display: block;
 }
 
 #year-slider {
-  margin: 3em 1em 2em 2em;
-  width: calc(100% - 4em);
+  margin: 1em 3em 3em 3em;
+  width: calc(100% - 6em);
+}
+
+
+.noUi-horizontal .noUi-tooltip {
+  bottom: -150%;
 }
 
 #play-button {
@@ -68,10 +75,6 @@
 
 #speed-and-countries {
   float: right;
-}
-
-.container .row {
-  display: flex;
 }
 
 .nowrap {
@@ -89,41 +92,27 @@
 
 .sub-menu {
   right: 0;
-  margin-top: 2ex;
+  top: calc(2em - 1px);
+  width: fit-content;
   background: var(--popup-background-colour);
   padding: 1em;
-  box-shadow: 0px 8px 16px 0px rgba(var(--shadow-colour-rgb), 0.2);
+  box-shadow: 0 1ex 2ex 0 rgba(var(--shadow-colour-rgb), 0.2);
   border: 1px solid rgba(var(--shadow-colour-rgb), 1);
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
+  border-radius: 1ex;
+  position: absolute;
   visibility: hidden; /* hides sub-menu */
   opacity: 0;
-  position: absolute;
-  width: auto;
-  transform: translateY(-2em);
   z-index: -1;
+  white-space: nowrap;
 
   display: flex;
   flex-wrap: nowrap;
 }
 
-
-nav ul,
-nav ul li {
+.country-list {
   list-style-type: none;
   padding: 0;
   margin: 0;
-}
-
-nav > ul > li {
-  display: inline-block;
-  border-left: solid 0 var(--popup-background-colour);
-  white-space: nowrap;
-}
-nav > ul > li:first-child {
-  border-left: none;
 }
 
 .noUi-target {
@@ -137,12 +126,9 @@ nav > ul > li:first-child {
   z-index: 2;
   background: var(--popup-background-colour);
   color: var(--text-colour);
-  box-shadow: 0px 8px 16px 0px rgba(var(--shadow-colour-rgb), 0.2);
+  box-shadow: 0 1ex 2ex 0 rgba(var(--shadow-colour-rgb), 0.2);
   border: 1px solid rgba(var(--shadow-colour-rgb), 1);
-  -webkit-border-radius: 8px;
-  -moz-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
+  border-radius: 1ex;
   line-height: 1;
   padding: 12px;
   pointer-events: none;
@@ -186,12 +172,12 @@ nav > ul > li:first-child {
   padding-left: 1ex;
 }
 .continentDiv fieldset {
-  margin: 8px;
+  margin: 1ex;
   margin-left: 0;
   border: 1px solid rgba(var(--shadow-colour-rgb), 1);
-  padding: 8px;
+  padding: 1ex;
   padding-top: 0;
-  border-radius: 4px;
+  border-radius: 0.5ex;
   display: initial;
 }
 .continentDiv legend {
